--- a/approval-service/Dockerfile
+++ b/approval-service/Dockerfile
@@ -1,19 +1,14 @@
-# Dockerfile for Approval Service
-
 # Use an official Node.js runtime as a parent image
 FROM node:14
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy the package.json and package-lock.json files
+# Copy the package.json and package-lock.json files into the working directory
 COPY package*.json ./
 
 # Install the dependencies
 RUN npm install
-
-# Verify that express is installed
-RUN ls node_modules | grep express
 
 # Copy the rest of the application code
 COPY . .
