--- a/approval-service/package.json
+++ b/approval-service/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "approval-service",
-    "version": "1.0.0",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    }
+  "name": "approval-service",
+  "version": "1.0.0",
+  "description": "Approval service for handling user approval",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
-  
+}
