--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "auth-service",
-    "version": "1.0.0",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "bcrypt": "^5.0.1",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^8.5.1"
-    }
+  "name": "auth-service",
+  "version": "1.0.0",
+  "description": "Auth service for user authentication",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
-  
+}
