--- a/user-service/package.json
+++ b/user-service/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "user-service",
-    "version": "1.0.0",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "bcrypt": "^5.0.1",
-      "express": "^4.18.2"
-    }
+  "name": "user-service",
+  "version": "1.0.0",
+  "description": "User service for handling user registration",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
-  
+}
