--- a/approval-service/package.json
+++ b/approval-service/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "approval-service",
+  "name": "service-name",
   "version": "1.0.0",
-  "description": "Approval service for handling user approval",
+  "description": "A microservice for handling user authentication, approval, and signup.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1"
+  },
+  "author": "Rajeev Kumar Koppisetti",
+  "license": "ISC"
 }
