--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth-service",
+  "name": "service-name",
   "version": "1.0.0",
-  "description": "Auth service for user authentication",
+  "description": "A microservice for handling user authentication, approval, and signup.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -10,6 +10,9 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
-  }
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1"
+  },
+  "author": "Rajeev Kumar Koppisetti",
+  "license": "ISC"
 }
