--- a/user-service/package.json
+++ b/user-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "user-service",
+  "name": "service-name",
   "version": "1.0.0",
-  "description": "User service for handling user registration",
+  "description": "A microservice for handling user authentication, approval, and signup.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -9,6 +9,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1"
+  },
+  "author": "Rajeev Kumar Koppisetti",
+  "license": "ISC"
 }
