--- a/approval-service/package.json
+++ b/approval-service/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "service-name",
+  "name": "approval-service",
   "version": "1.0.0",
-  "description": "A microservice for handling user authentication, approval, and signup.",
+  "description": "A microservice for handling user approval.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "axios": "^0.21.1"
   },
   "author": "Rajeev Kumar Koppisetti",
   "license": "ISC"
