--- a/user-service/package.json
+++ b/user-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "service-name",
+  "name": "user-service",
   "version": "1.0.0",
-  "description": "A microservice for handling user authentication, approval, and signup.",
+  "description": "A microservice for handling user signup.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -10,8 +10,8 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "axios": "^0.21.1"
   },
   "author": "Rajeev Kumar Koppisetti",
   "license": "ISC"
