--- a/approval-service/package.json
+++ b/approval-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "approval-service",
   "version": "1.0.0",
-  "description": "A microservice for handling user approval.",
+  "description": "A microservice for approving users via email.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -9,8 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "axios": "^0.21.1"
+    "pg": "^8.7.1"
   },
   "author": "Rajeev Kumar Koppisetti",
   "license": "ISC"
