--- a/user-service/package.json
+++ b/user-service/package.json
@@ -1,18 +1,19 @@
 {
   "name": "user-service",
   "version": "1.0.0",
-  "description": "A microservice for handling user signup.",
+  "description": "A microservice for user signup and email approval.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "axios": "^0.21.1"
+    "pg": "^8.7.1"
   },
   "author": "Rajeev Kumar Koppisetti",
   "license": "ISC"
 }
+  
