--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "redis" : "^4.7.0" 
   },
   "author": "Rajeev Kumar Koppisetti",
   "license": "ISC"
